package abstractfactory;
public interface Checkbox {
    void render();
}